Edited wiki page through web user interface.

--- a/wiki/HowToCompile.wiki
+++ b/wiki/HowToCompile.wiki
@@ -1,7 +1,7 @@
 #labels compilation,build,windows,linux
 This page contains instructions how-to compile Geoid
 
-== Under Linux ==
+=== Under Linux ===
 To install Geoid you need subversion to obtain source code and Qt4 development libraries to compile it. The way you install these packages depends on your distribution.
 For example, under ubuntu you can execute this command:
 {{{
@@ -17,7 +17,7 @@ make
 Geoid executable binary will appear in bin/ subfolder
 
 
-== Under Windows ==
+=== Under Windows ===
 First of all you should install Qt development libraries and MinGW(which is a Windows port of GNU Compilers). Qt setup file is available here: http://trolltech.com/developer/downloads/qt/windows (at the time of writing it was qt-win-opensource-4.3.4-mingw.exe). During installation it will offer you to download MinGW - you should agree.
 
 Next step is installing subversion. You can download the latest version here : http://subversion.tigris.org/servlets/ProjectDocumentList?folderID=91 At the time of writing it was svn-1.4.6-setup.exe . After you installed subversion you might have to restart the system, because it modifies %PATH% variable.
