--- a/wiki/HowToCompile.wiki
+++ b/wiki/HowToCompile.wiki
@@ -18,9 +18,9 @@ Geoid executable binary will appear in bin/ subfolder
 
 
 === Under Windows ===
-First of all you should install Qt development libraries and MinGW(which is a Windows port of GNU Compilers). Qt setup file is available here: http://trolltech.com/developer/downloads/qt/windows (at the time of writing it was qt-win-opensource-4.3.4-mingw.exe). During installation it will offer you to download MinGW - you should agree.
+First of all you should install Qt development libraries and MinGW(which is a Windows port of GNU Compilers). Qt setup file is available here: http://trolltech.com/developer/downloads/qt/windows (at the time of writing it was qt-win-opensource-4.3.4-mingw.exe). During installation it will suggest you downloading MinGW - you should agree.
 
-Next step is installing subversion. You can download the latest version here : http://subversion.tigris.org/servlets/ProjectDocumentList?folderID=91 At the time of writing it was svn-1.4.6-setup.exe .
+The next step is installing subversion. You can download the latest version here : http://subversion.tigris.org/servlets/ProjectDocumentList?folderID=91 At the time of writing it was svn-1.4.6-setup.exe .
 
 Next you should do a small modification to the following file: C:\Qt\4.3.4\bin\qtvars.bat (version of Qt of course may differ). Find in the file the line:
 {{{
@@ -30,7 +30,7 @@ And change it to
 {{{
 set PATH=%PATH%;C:\Qt\4.3.4\bin
 }}}
-That's because this Qt bat file replaces system path variable, which contains path to subversion binaries. Once you finish, go to the start Menu: Programs -> Qt by Trolltech (OpenSource) -> Qt Command Prompt. Change the directory to you projects directory, and type the following commands:
+That's because this Qt bat file replaces %PATH% variable, which contains path to subversion binaries. Once you finish, go to the start Menu: Programs -> Qt by Trolltech (OpenSource) -> Qt Command Prompt. Change the directory to you projects directory, and type the following commands:
 {{{
 svn checkout http://geoid.googlecode.com/svn/trunk/ geoid
 cd geoid
